--- a/src/pages/css/Home.css
+++ b/src/pages/css/Home.css
@@ -1,5 +1,5 @@
 :root{
-    --body_background:#ebe7e7;
+    --body_background:#f5f5f5;
     --container-navbar-left: #053f5c;
     --title-card1:#10054e;
     --title-card3:#10054e;
@@ -61,7 +61,7 @@
 }
 .card3{
     width: 47%;
-    height: 250px;
+    height: 300px;
     border-radius: 10px;
     box-shadow:5px 5px 15px rgba(0,0,0, 0.3);
     margin: 1em ;
@@ -139,8 +139,12 @@ input[type="checkbox"]{
     font-weight: 200;
 }
 .title-logo{
-    color: var(--title-logo);
-    margin: 1em 0 0 -1em;
+    background: linear-gradient(to top,#1aa7ec,#4adede);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    margin-top:0.2em;
+    margin: 1em 0 0 -1.5em;
 }
 .sortie{
     width: 15px;
@@ -149,9 +153,21 @@ input[type="checkbox"]{
 .navbar{
     margin-top:-1.5em
 }
-/*.main-image{
-    width: 60em;
-    height: 15em;
-    margin-left: 2em;
-    border-radius: 20px;
-}*/
+.history-entree{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 2.5em;
+    margin-bottom: -0.2em;
+    margin-left: 4em;
+}
+.history-nom{
+    width: 35%;
+}
+.history-date{
+    width: 45%;
+}
+.history-title-entry{
+    margin: 2em 0em 0em 3em;
+    color: var(--title-card3);
+    font-weight: 200;
+}
