--- a/src/pages/css/Log.css
+++ b/src/pages/css/Log.css
@@ -6,7 +6,7 @@
     margin-bottom: 2em;
     outline: none;
     border: none;
-    background-color: #4108834f;
+    background-color: #0b1b3a;
     border-radius: 4px;
     color: #fff;
     font-size: 1em;
@@ -14,11 +14,12 @@
 }
 
 .btn:hover{
-    background-color: #0b1b3a;
+    background-color: #4108834f;
 }
 .container{
         height: 100vh;
-        background-image: linear-gradient(#6baace, #264783);
+       /* background-image: linear-gradient(#6baace, #264783);*/
+       background-image: linear-gradient(#6baace, #2559b9)
     }
 .form-container{
     display: flex;
