--- a/src/pages/css/Entree.css
+++ b/src/pages/css/Entree.css
@@ -13,7 +13,7 @@
     --container-inline:#2e374b4b;
     --title-material:rgba(255, 255, 255, 0.8);
     --tr:#a1d7f72c;
-    --th:linear-gradient(to right,#1aa7ec,#4adede);
+    --th:#1aa7ec;
     --button-entree:linear-gradient(to right,#1aa7ec,#4adede);
     --text-head:#0d0c42a6;
     --td:#ffffffb9;
