--- a/src/pages/css/Home.css
+++ b/src/pages/css/Home.css
@@ -8,12 +8,12 @@
 }
 
 [data-theme="dark"]{
-    --body_background:#141a27;
+    --body_background:#14161e;
     --container-navbar-left: #2e374b4b;
     --card-color: #2e374b4b;
     --title-card1:rgba(255, 255, 255, 0.5);
-    --title-card3: #1b4daa;
-    --title-logo:#1b4daa;
+    --title-card3: #1aa7ec;
+    --title-logo:#4adede;
     --container-link:rgba(255, 255, 255, 0.5);
 }
 
@@ -22,6 +22,7 @@
     display: block;
     margin: 1em 1em 0 auto;
     background-color: #566d94;
+    background-color: #4bc0c0;
     width: 60px;
     height: 30px;
     border-radius: 40px;
@@ -52,11 +53,11 @@
     background-color:var(--card-color);
 }
 .card2{
-    width: 97%;
+    width: 65%;
     height: 290px;
     border-radius: 10px;
     box-shadow:5px 5px 15px rgba(0,0,0, 0.3);
-    margin:3em auto;
+    margin:3em 1em ;
     background-color:var(--card-color);
 }
 .card3{
@@ -102,7 +103,9 @@
 .image-card{
     margin-top: -1.5em;
     margin-right: -2.2em;
-
+}
+.image-utilisateur{
+    margin-top: 1em;
 }
 input:checked + .button{
    /* background-color: #2c2a2a;*/
