--- a/src/pagesDepot/cssDepot/connection.css
+++ b/src/pagesDepot/cssDepot/connection.css
@@ -1,6 +1,6 @@
 @import url('http://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900');
 
-body
+.body
 {
     margin: 0;
     padding: 0;
@@ -12,12 +12,13 @@ body
     font-family: 'Poppins', sans-serif;
 }
 
-.container
+.container1
 {
-    position: relative;
+  /*  position: relative;
     width: 90%;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
     grid-gap: 0 40px;
     grid-template-rows: 0 40px;
+    */
 }
