--- a/src/pagesDepot/cssDepot/connection.css
+++ b/src/pagesDepot/cssDepot/connection.css
@@ -1,6 +1,6 @@
 @import url('http://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900');
 
-body
+.body
 {
     margin: 0;
     padding: 0;
@@ -15,9 +15,37 @@ body
 .container
 {
     position: relative;
-    width: 90%;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
     grid-gap: 0 40px;
-    grid-template-rows: 0 40px;
+    grid-template-rows: auto;
+}
+.container .box
+{
+    position: relative;
+    height: 400px;
+    background: #060c21;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #000;
+}
+.content
+{
+    position: relative;
+    padding: 20px;
+}
+.content h2
+{
+    position: absolute;
+    top: -60px;
+    right: 20px;
+    margin: 0;
+    padding: 0;
+    font-size: 10em;
+    color: rgba(255, 255, 255,.05);
+    transition: 0.5s;
 }
