--- a/src/pagesDepot/cssDepot/connection.css
+++ b/src/pagesDepot/cssDepot/connection.css
@@ -12,7 +12,7 @@
     font-family: 'Poppins', sans-serif;
 }
 
-.container
+.container1
 {
     position: relative;
     width: 100%;
@@ -23,7 +23,7 @@
     grid-gap: 0 40px;
     grid-template-rows: auto;
 }
-.container .box
+.container1 .box
 {
     position: relative;
     height: 400px;
