--- a/src/pagesDepot/cssDepot/connection.css
+++ b/src/pagesDepot/cssDepot/connection.css
@@ -14,11 +14,11 @@
 
 .container1
 {
-  /*  position: relative;
+   position: relative;
     width: 90%;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
     grid-gap: 0 40px;
     grid-template-rows: 0 40px;
-    */
+    
 }
