--- a/src/pagesDepot/cssDepot/connection.css
+++ b/src/pagesDepot/cssDepot/connection.css
@@ -1,8 +1,9 @@
 @import url('http://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900');
 
-.body
+/*.body
 {
     margin: 0;
+    width: 100%;
     padding: 0;
     display: flex;
     justify-content: center;
@@ -10,23 +11,19 @@
     min-height: 100vh;
     background: #060c21;
     font-family: 'Poppins', sans-serif;
-}
+}*/
 
 .container1
 {
-   position: relative;
-    width: 90%;
+    
     display: grid;
     position: relative;
     width: 100%;
     align-items: center;
     justify-content: center;
-    /*display: grid;*/
-    display: flex;
+    background: #060c21;
     grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
     grid-gap: 0 40px;
-    grid-template-rows: 0 40px;
-    
     grid-template-rows: auto;
 }
 .container1 .box
