--- a/src/pagesDepot/cssDepot/connection.css
+++ b/src/pagesDepot/cssDepot/connection.css
@@ -1,8 +1,8 @@
 @import url('http://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900');
 
-.body
+.bodyConnnection
 {
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
     display: flex;
     justify-content: center;
@@ -12,37 +12,41 @@
     font-family: 'Poppins', sans-serif;
 }
 
-.container
+.containerConnection
 {
     position: relative;
     width: 100%;
     align-items: center;
-    justify-content: center;
-    display: grid;
+    justify-content: center;    
+    display: flex;
     grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
     grid-gap: 0 40px;
     grid-template-rows: auto;
 }
-.container .box
+.containerConnection .box
 {
     position: relative;
     height: 400px;
+    width: 300px;
     background: #060c21;
     display: flex;
     justify-content: center;
     align-items: center;
     border: 1px solid #000;
 }
+
 .content
 {
     position: relative;
-    padding: 20px;
+    padding: 100px;
+    margin-left: 0;
+    margin-right: 50%;
 }
 .content h2
 {
     position: absolute;
     top: -60px;
-    right: 20px;
+    right: 0;
     margin: 0;
     padding: 0;
     font-size: 10em;
