--- a/src/pagesDepot/cssDepot/connection.css
+++ b/src/pagesDepot/cssDepot/connection.css
@@ -15,10 +15,38 @@
 .container1
 {
    position: relative;
-    width: 90%;
-    display: grid;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
     grid-gap: 0 40px;
     grid-template-rows: 0 40px;
-    
+}
+.container1 .box{
+    margin-right: 60px;
+    position: relative;
+    height: 400px;
+    width: 300px;
+    background: #060c21;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #000;
+}
+
+.content{
+    position: relative;
+    padding: 100px;
+    margin-left:0;
+    margin-right: 50%;
+}
+.content h2 {
+    position: absolute;
+    top: -60px;
+    right: 0;
+    margin: 0;
+    padding: 0;
+    font-size: 10em;
+    color:rgba(255, 255, 255, .05);
+    transition: 0.5s;
 }
