--- a/src/pagesDepot/cssDepot/connection.css
+++ b/src/pagesDepot/cssDepot/connection.css
@@ -1,9 +1,9 @@
 @import url('http://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900');
 
-.body
+.bodyConnection
 {
     margin: 0;
-    padding: 0;
+    padding-left: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -12,41 +12,135 @@
     font-family: 'Poppins', sans-serif;
 }
 
-.container1
+.containerConnection
 {
-   position: relative;
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
     grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
     grid-gap: 0 40px;
-    grid-template-rows: 0 40px;
+    grid-template-rows: auto;
 }
-.container1 .box{
+.containerConnection .box
+{
     margin-right: 60px;
     position: relative;
     height: 400px;
     width: 300px;
     background: #060c21;
     display: flex;
-    align-items: center;
     justify-content: center;
     border: 1px solid #000;
 }
+.containerConnection .box:before
+{
+    content:'';
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    right: -2px;
+    bottom: -2px;
+    background: #fff;
+    transform: skew(5deg, 5deg);
+    z-index: -1;
+    -webkit-transform: skew(5deg, 5deg);
+}
+.containerConnection .box:nth-child(1)::before
+{
+    background: linearGradient(315deg,#ff0057,#e64a19);
+}
+.containerConnection .box:nth-child(2)::before
+{
+    background: linearGradient(315deg,#89ff00,#00bcd4);
+}.containerConnection .box:nth-child(3)::before
+{
+    background: linearGradient(315deg,#e91e36,#5d02ff);
+}
 
-.content{
+.containerConnection .box::after
+{
+    content:'';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 100%;
+    background: rgba(255, 255, 255,0.05);
+    pointer-events: none;
+}
+.contentConnection{
     position: relative;
     padding: 100px;
     margin-left:0;
     margin-right: 50%;
+    transform: translateY(40px);
+    -webkit-transform: translateY(40px);
+    -moz-transform: translateY(40px);
+    -ms-transform: translateY(40px);
+    -o-transform: translateY(40px);
 }
-.content h2 {
+.box.contentConnection .numero {
     position: absolute;
-    top: -60px;
-    right: 0;
+    top: 10px;
+    right: -50px;
     margin: 0;
     padding: 0;
     font-size: 10em;
     color:rgba(255, 255, 255, .05);
     transition: 0.5s;
+}
+.box:hover .contentConnection .numero
+{
+    top: -50px;
+}
+.box .contentConnection .titre
+{
+     margin: 0 0 10;
+     padding: 0;
+     font-size: 30px;
+     font-weight: 500;
+     color: #fff;
+}
+.box .contentConnection .paragrapheConnection
+{
+    color:#fff;
+    font-size: 16px;
+}
+.box .contentConnection .btnConnection
+{
+    position: relative;
+    margin: 20px 0 0;
+    padding: 10px 20px;
+    text-decoration: none;
+    border: 1px solid #fff;
+    display: inline-block;
+    color:#fff;
+    transition: 0.5s;
+    -webkit-transition: 0.5s;
+    -moz-transition: 0.5s;
+    -ms-transition: 0.5s;
+    -o-transition: 0.5s;
+    transform: translateY(-40px);
+    -webkit-transform: translateY(-40px);
+    -moz-transform: translateY(-40px);
+    -ms-transform: translateY(-40px);
+    -o-transform: translateY(-40px);
+    opacity: 0;
+    visibility: hidden;
+}
+.box:hover .contentConnection .btnConnection
+{
+    transform: translateY(0);
+    opacity: 1;
+    visibility: visible;
+    -webkit-transform: translateY(0);
+    -moz-transform: translateY(0);
+    -ms-transform: translateY(0);
+    -o-transform: translateY(0);
+}
+.box .contentConnection .btnConnection:hover
+{
+    color:#000;
+    background: #fff;
 }
