--- a/src/pagesDepot/cssDepot/connection.css
+++ b/src/pagesDepot/cssDepot/connection.css
@@ -31,9 +31,22 @@
     background: #060c21;
     display: flex;
     justify-content: center;
-    border: 1px solid #000;
+    border: 3px solid #000;
 }
 .containerConnection .box:before
+{
+    content:'';
+    position: absolute;
+    top: -20px;
+    left: -20px;
+    right: -20px;
+    bottom: -20px;
+    background: #fff;
+    transform: skew(5deg, 5deg);
+    z-index: -1;
+    -webkit-transform: skew(5deg, 5deg);
+}
+.containerConnection .box::after
 {
     content:'';
     position: absolute;
@@ -41,34 +54,32 @@
     left: -2px;
     right: -2px;
     bottom: -2px;
-    background: #fff;
-    transform: skew(5deg, 5deg);
-    z-index: -1;
-    -webkit-transform: skew(5deg, 5deg);
-}
-.containerConnection .box:nth-child(1)::before
-{
-    background: linearGradient(315deg,#ff0057,#e64a19);
-}
-.containerConnection .box:nth-child(2)::before
-{
-    background: linearGradient(315deg,#89ff00,#00bcd4);
-}.containerConnection .box:nth-child(3)::before
-{
-    background: linearGradient(315deg,#e91e36,#5d02ff);
-}
-
-.containerConnection .box::after
-{
-    content:'';
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 50%;
     height: 100%;
-    background: rgba(255, 255, 255,0.05);
+    background: rgba(255, 255, 255,0.1);
     pointer-events: none;
+    z-index: -2;
+
 }
+
+
+.box:nth-child(1)::before,
+.box:nth-child(1)::after
+{
+    background: linear-gradient(315deg,#ff0057,#e64a19);
+}
+.box:nth-child(2)::before,
+.box:nth-child(2)::after
+{
+    background: linear-gradient(315deg,#89ff00,#00bcd4);
+}
+.box:nth-child(3)::before,
+.box:nth-child(3)::after
+{
+    background: linear-gradient(315deg,#e91e36,#5d02ff);
+}
+
+
 .contentConnection{
     position: relative;
     padding: 100px;
@@ -80,9 +91,9 @@
     -ms-transform: translateY(40px);
     -o-transform: translateY(40px);
 }
-.box.contentConnection .numero {
+.box .contentConnection .numero {
     position: absolute;
-    top: 10px;
+    top: -10px;
     right: -50px;
     margin: 0;
     padding: 0;
@@ -92,7 +103,7 @@
 }
 .box:hover .contentConnection .numero
 {
-    top: -50px;
+    top: -80px;
 }
 .box .contentConnection .titre
 {
@@ -117,15 +128,7 @@
     display: inline-block;
     color:#fff;
     transition: 0.5s;
-    -webkit-transition: 0.5s;
-    -moz-transition: 0.5s;
-    -ms-transition: 0.5s;
-    -o-transition: 0.5s;
     transform: translateY(-40px);
-    -webkit-transform: translateY(-40px);
-    -moz-transform: translateY(-40px);
-    -ms-transform: translateY(-40px);
-    -o-transform: translateY(-40px);
     opacity: 0;
     visibility: hidden;
 }
