--- a/src/pagesDepot/cssDepot/connection.css
+++ b/src/pagesDepot/cssDepot/connection.css
@@ -2,8 +2,8 @@
 
 .bodyConnection
 {
-    margin: 0;
-    padding-left: 40px;
+    margin-left: 0;
+    padding: 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -15,40 +15,44 @@
 .containerConnection
 {
     position: relative;
-    display: flex;
+    margin-left: 6%;
+    width: 90%;
+    display: grid;
     align-items: center;
     justify-content: center;
-    grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
     grid-gap: 0 40px;
     grid-template-rows: auto;
 }
+
 .containerConnection .box
 {
-    margin-right: 60px;
+    
     position: relative;
     height: 400px;
-    width: 300px;
     background: #060c21;
     display: flex;
     justify-content: center;
-    border: 3px solid #000;
+    align-items: center;
+    border: 2px solid #000;
+    width: 300px;
 }
-.containerConnection .box:before
+.containerConnection .box::before
 {
-    content:'';
+    content: '';
     position: absolute;
-    top: -20px;
-    left: -20px;
-    right: -20px;
-    bottom: -20px;
+    top: -2px;
+    left: -2px;
+    right: -2px;
+    bottom: -2px;
     background: #fff;
-    transform: skew(5deg, 5deg);
+    transform: skew(2deg,2deg);
     z-index: -1;
-    -webkit-transform: skew(5deg, 5deg);
+ 
 }
 .containerConnection .box::after
 {
-    content:'';
+    content: '';
     position: absolute;
     top: -2px;
     left: -2px;
@@ -58,43 +62,34 @@
     height: 100%;
     background: rgba(255, 255, 255,0.1);
     pointer-events: none;
-    z-index: -2;
 
 }
 
-
-.box:nth-child(1)::before,
-.box:nth-child(1)::after
+/*
+.containerConnection .box:nth-child(1)::before
 {
     background: linear-gradient(315deg,#ff0057,#e64a19);
 }
-.box:nth-child(2)::before,
-.box:nth-child(2)::after
+.containerConnection .box:nth-child(2)::before
 {
     background: linear-gradient(315deg,#89ff00,#00bcd4);
 }
-.box:nth-child(3)::before,
-.box:nth-child(3)::after
+.containerConnection .box:nth-child(3)::before
 {
     background: linear-gradient(315deg,#e91e36,#5d02ff);
 }
 
-
+*/
 .contentConnection{
     position: relative;
-    padding: 100px;
-    margin-left:0;
-    margin-right: 50%;
+    padding: 20px;
+    margin-left: -60px;
     transform: translateY(40px);
-    -webkit-transform: translateY(40px);
-    -moz-transform: translateY(40px);
-    -ms-transform: translateY(40px);
-    -o-transform: translateY(40px);
 }
-.box .contentConnection .numero {
+.contentConnection .numero {
     position: absolute;
-    top: -10px;
-    right: -50px;
+    top: -120px;
+    right: -70px;
     margin: 0;
     padding: 0;
     font-size: 10em;
@@ -103,11 +98,11 @@
 }
 .box:hover .contentConnection .numero
 {
-    top: -80px;
+    top: -180px;
 }
 .box .contentConnection .titre
 {
-     margin: 0 0 10;
+     margin: 0 -20px 10px;
      padding: 0;
      font-size: 30px;
      font-weight: 500;
@@ -115,6 +110,8 @@
 }
 .box .contentConnection .paragrapheConnection
 {
+    margin-left: -20px;
+    padding: 0;
     color:#fff;
     font-size: 16px;
 }
@@ -124,11 +121,11 @@
     margin: 20px 0 0;
     padding: 10px 20px;
     text-decoration: none;
-    border: 1px solid #fff;
+    border: 1px solid #1e6a96;
     display: inline-block;
-    color:#fff;
+    color:#1e6a96;
     transition: 0.5s;
-    transform: translateY(-40px);
+    transform: translateY(-20px);
     opacity: 0;
     visibility: hidden;
 }
@@ -145,5 +142,5 @@
 .box .contentConnection .btnConnection:hover
 {
     color:#000;
-    background: #fff;
+    background: #1e6a96;
 }
