--- a/src/pagesDepot/cssDepot/connection.css
+++ b/src/pagesDepot/cssDepot/connection.css
@@ -85,6 +85,10 @@
     padding: 20px;
     margin-left: -60px;
     transform: translateY(40px);
+    -webkit-transform: translateY(40px);
+    -moz-transform: translateY(40px);
+    -ms-transform: translateY(40px);
+    -o-transform: translateY(40px);
 }
 .contentConnection .numero {
     position: absolute;
