--- a/src/pages/css/Entree.css
+++ b/src/pages/css/Entree.css
@@ -1,7 +1,7 @@
 :root{
     --container-inline:#fff;
     --title-material: #053f5c;
-    --tbody: #a1d7f72c;
+    --tbody: #e7ecf8;
     --tr:#fff;
     --th: #053f5c;
     --button-entree: #a1d7f72c;
