--- a/src/pages/css/Home.css
+++ b/src/pages/css/Home.css
@@ -8,6 +8,8 @@
     --container-link:#d0d6e9;
     --color-card2:#14161e;
     --card-color:#ffffff;
+    --utilisateur:#053f5c;
+    --utilisateur2:#053f5c;
 }
 
 [data-theme="dark"]{
@@ -20,14 +22,16 @@
     --title-logo:#4adede;
     --container-link:#9aa8c9a6;
     --color-card2:rgba(255, 255, 255, 0.5);
+    --utilisateur:#2faaaa;
+    --utilisateur2:#4adede;
 }
 
-
+/*Darkmode*/
 .button{
     display: block;
-    margin: 1em 1em 0 auto;
+    margin-top: 1em ;
     background-color: #566d94;
-    background-color: #4bc0c0;
+    background-color: #053f5c;
     width: 60px;
     height: 30px;
     border-radius: 40px;
@@ -42,7 +46,43 @@
     margin: 2px;
     border-radius: 50%;
 }
+.navbar-horizontal{
+    display: flex;
+    margin-top: 1em;
+    justify-content: space-between;
+}
+.cercle-utilisateur{
+    width: 3.5em;
+    height: 3.5em;
+    border-radius: 50%;
+    background-color: var(--utilisateur);
+    margin-bottom: 1em;
+   
+}
 
+.navbar-flex{
+    display: flex;
+    width: 7em;
+    justify-content: space-between;
+    float: right;
+}
+.notif{
+    width: 2em;
+    margin-top: -3.6em;
+}
+.utilisateur{
+    margin-top: 1em;
+    margin-left: 2em;
+}
+.nom-utilisateur{
+    color:  var(--utilisateur);
+    font-size: 1.5em;
+    font-weight: 700;
+}
+.texte-utilisateur{
+    color:  var(--utilisateur2);
+    font-weight: 500;
+}
 .card{
     display: flex;
     justify-content: space-around;
@@ -52,7 +92,6 @@
     border-radius: 10px;
     box-shadow:5px 5px 15px rgba(0,0,0, 0.3);
     margin:2em 2em;
- 
 }
 .card1{
     background-color:var(--card-color);
