--- a/src/pages/css/Home.css
+++ b/src/pages/css/Home.css
@@ -72,7 +72,7 @@
 }
 .utilisateur{
     margin-top: 1em;
-    margin-left: 2em;
+    margin-left: 2.5em;
 }
 .nom-utilisateur{
     color:  var(--utilisateur);
@@ -80,6 +80,8 @@
     font-weight: 700;
 }
 .texte-utilisateur{
+    margin-top: 2em;
+    margin-bottom: 1em;
     color:  var(--utilisateur2);
     font-weight: 500;
 }
