--- a/src/pages/css/Entree.css
+++ b/src/pages/css/Entree.css
@@ -119,6 +119,10 @@ input{
     background-color: var(--container-inline);
     border-radius: 20px;
     margin: 4em 0  0 0.8em;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
 }
 table{
     width: 95%;
