--- a/src/pagesDepot/cssDepot/connection.css
+++ b/src/pagesDepot/cssDepot/connection.css
@@ -2,42 +2,49 @@
 
 .bodyConnection
 {
-    margin-left: 0;
+    margin-left: -8px;
+    margin-top: -8px;
+    margin-right: -8px;
+    margin-bottom: -8px;
     padding: 0;
-    display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: #060c21;
+    background: rgb(11, 27, 58);
     font-family: 'Poppins', sans-serif;
 }
+.containerConnection{
+    display: flex;
+    flex-direction: column;
 
-.containerConnection
+}
+.connection
 {
     position: relative;
     margin-left: 6%;
     width: 90%;
     display: grid;
-    align-items: center;
-    justify-content: center;
+    flex-direction: column;
     grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
     grid-gap: 0 40px;
     grid-template-rows: auto;
 }
 
-.containerConnection .box
+.connection .box
 {
     
     position: relative;
     height: 400px;
-    background: #060c21;
+    background: rgb(11, 27, 58);
     display: flex;
     justify-content: center;
     align-items: center;
     border: 2px solid #000;
     width: 300px;
+    margin-bottom: 10px;
+    margin-top: 50px;
 }
-.containerConnection .box::before
+.connection .box::before
 {
     content: '';
     position: absolute;
@@ -48,10 +55,13 @@
     background: #fff;
     transform: skew(2deg,2deg);
     z-index: -1;
- 
+    -webkit-transform: skew(2deg,2deg);
+    -moz-transform: skew(2deg,2deg);
+    -ms-transform: skew(2deg,2deg);
+    -o-transform: skew(2deg,2deg);
 }
-.containerConnection .box::after
-{
+.connection .box::after
+{ 
     content: '';
     position: absolute;
     top: -2px;
@@ -65,16 +75,13 @@
 
 }
 
-/*
-.containerConnection .box:nth-child(1)::before
+/*connection .box:nth-child(1)::before
 {
     background: linear-gradient(315deg,#ff0057,#e64a19);
-}
-.containerConnection .box:nth-child(2)::before
+}connection .box:nth-child(2)::before
 {
     background: linear-gradient(315deg,#89ff00,#00bcd4);
-}
-.containerConnection .box:nth-child(3)::before
+}connection .box:nth-child(3)::before
 {
     background: linear-gradient(315deg,#e91e36,#5d02ff);
 }
@@ -99,17 +106,21 @@
     font-size: 10em;
     color:rgba(255, 255, 255, .05);
     transition: 0.5s;
+    -webkit-transition: 0.5s;
+    -moz-transition: 0.5s;
+    -ms-transition: 0.5s;
+    -o-transition: 0.5s;
 }
 .box:hover .contentConnection .numero
 {
     top: -180px;
 }
-.box .contentConnection .titre
+.titre
 {
      margin: 0 -20px 10px;
      padding: 0;
      font-size: 30px;
-     font-weight: 500;
+     font-weight: 500px;
      color: #fff;
 }
 .box .contentConnection .paragrapheConnection
@@ -138,13 +149,32 @@
     transform: translateY(0);
     opacity: 1;
     visibility: visible;
-    -webkit-transform: translateY(0);
-    -moz-transform: translateY(0);
-    -ms-transform: translateY(0);
-    -o-transform: translateY(0);
 }
 .box .contentConnection .btnConnection:hover
 {
     color:#000;
+    background: #1e6a96;
+}
+
+.headerConnection {
+    margin-left: 0;
+    padding: 0;
+    justify-content: center;
+    align-items: center;
+    background: rgb(11, 27, 58);
+    font-family: 'Poppins', sans-serif;
+    display: flex;
+    flex-direction: column;
+}
+.btnConnectionAdmin{
+    margin: 20px 0 0;
+    padding: 10px 20px;
+    text-decoration: none;
+    border: 1px solid #1e6a96;
+    display: inline-block;
+    color:#1e6a96;
+}
+.btnConnectionAdmin:hover {
+    color:#fff;
     background: #1e6a96;
 }
