--- a/src/pages/SEcurité/Securite.css
+++ b/src/pages/SEcurité/Securite.css
@@ -42,6 +42,10 @@
     background-color: #fff;
     box-shadow: 5px 5px 10px rgba(7, 113, 145, 0.3); 
 }
+.carte1:hover{
+    transform: scale(1.1);
+    z-index: 2;
+}
 .choice{
     display: flex;
     justify-content: space-around;
