--- a/src/pages/css/Home.css
+++ b/src/pages/css/Home.css
@@ -31,9 +31,9 @@
     position: absolute;
 }
 .notif-show{
-    width: 15em;
+    width: 20em;
     height: auto;
-    margin-left: -13.5em;
+    margin-left: -20em;
     margin-top: -1em;
     background-color: #053f5c;
     padding: 20px;
@@ -42,7 +42,28 @@
     padding-bottom: 30px;
     border: 1px solid white;
 }
-
+.notif-read{
+    display: flex;
+    justify-content: space-around;
+    width: 80%;
+    margin: 15px auto 30px;
+}
+.btn-read{
+    border: none;
+    background-color: #fff;
+    color: #053f5c;
+    padding: 5px;
+    margin-left: -28px;
+}
+.link-read{
+    border: none;
+    background-color: #fff;
+    color: #053f5c;
+    padding: 8px;
+    width: 5em;
+    text-decoration: none;
+    text-align: center;
+}
 .settings{
     display: flex;
 }
